2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: ColumnDefinitionCollection.cs, Grid.cs,  RowDefinitionCollection.cs: Experimental fix.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Incomplete and buggy ShowGridLines implementation.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* ColumnDefinition.cs, Grid.cs, RowDefinition.cs: Implemented Row/ColumnDefinition.Offset (hopefully).

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Another row/column span handling fix.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Added measurement invalidation in response to changes in attached properties.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Fixed row/column span handling.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Fixed star sizing.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Added handling for some layout cases.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: More work.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: More work.
	* ColumnDefinition.cs, DefinitionBase.cs, RowDefinition.cs: Added.
	* ColumnDefinitionCollection.cs, RowDefinitionCollection.cs: Reset ActualWidth/ActualHeight when the contents change.

2007-06-20  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Initial implementation. It is missing some features and has some bugs but some trivial cases work.
	* ColumnDefinitionCollection.cs, RowDefinitionCollection.cs: Added.	

2007-06-19  George Giolfan  <georgegiolfan@yahoo.com>

	* TabItem.cs: Fixed arrangement when IsSelected changes.

2007-06-19  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Added.

2007-06-18  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl.cs, TabItem.cs: More fixes.

2007-06-17  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl.cs, TabItem.cs: Improved (the TabControl sample is displayed correctly now).
