@@ -1,3 +1,7 @@
+2007-06-22  George Giolfan  <georgegiolfan@yahoo.com>
+
+	* Grid.cs: Added validation for Column, ColumnSpan, Row, RowSpan.
+
 2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>
 
 	* Grid.cs: ColumnDefinitionCollection.cs, Grid.cs,  RowDefinitionCollection.cs: Experimental fix.
